9.3.7/index.md
---
title: Home
template: home-blocks.html
hide:
  - navigation
  - toc
---

<div class="grid cards" markdown>

-   :material-new-box:{ .lg .middle } __What's New?__

    ---

    Find out what's new in the latest HCL Leap.
    
    ---

    [:octicons-arrow-right-24: Go to What's New](./whats_new.md)
    
-   :material-code-braces-box:{ .lg .middle } __Introducing Leap__

    ---

    HCL Leap builds dynamic forms and applications with a web-based interface. From a single interface, you can design a form, define access privileges, create workflow stages, deploy the application, and review submitted results.    

    ---

    [:octicons-arrow-right-24: Learn about Leap](./ovr_overview.md)

-   :material-server-network:{ .lg .middle } __Deploying Leap__

    ---

    Learn how to deploy Leap.
    
    ---

    [:octicons-arrow-right-24: Deploying Leap](./in_overview.md)

-   :material-list-box:{ .lg .middle } __System Requirements__

    ---

    Know the minimum system requirements for HCL Leap version 9.3.7 and later.

    ---

    [:octicons-arrow-right-24: Go to System Requirements](./ovr_release_notes.md)

-   :material-book-open-variant:{ .lg .middle } __Tutorials__

    ---

    The Leap Help Center contains a section for tutorials to help you use Leap.

    ---

    [:octicons-arrow-right-24: Go to How To](./tut_tutorials_toc.md)

-   :material-school:{ .lg .middle } __HCLSoftware U__

    ---

    <!--![HCL Software U Logo](./assets/homepage-images/HCLSoftware-U-logo-blk.png)-->

    Explore self-paced learning courses for using HCL Leap.
    
    ---

    [:octicons-arrow-right-24: Visit HCL Software U](https://hclsoftwareu.hcltechsw.com/){target="_blank"}

-   :material-lifebuoy:{ .lg .middle } __HCL Support__

    ---

    Discover HCL support bulletins and access your support cases.

    ---

    [:octicons-arrow-right-24: Access Support](https://support.hcltechsw.com/csm?id=csm_index){target="_blank"}

-   :material-theater:{ .lg .middle } __Community Forums__

    ---

    Join Leap community forums to connect with other Leap users, ask questions, and share insights.

    ---

    [:octicons-arrow-right-24: Go to Community Forums](https://support.hcltechsw.com/community){target="_blank"}

-   :material-account-group:{ .lg .middle } __Leap Ideas Portal__

    ---

    Join the Leap Ideas Portal to submit ideas for HCL Leap.

    ---

    [:octicons-arrow-right-24: Join Leap Ideas Portal](https://domino-ideas.hcltechsw.com/){target="_blank"}

-   :material-help-box:{ .lg .middle } __Leap 9.3.4 and earlier Help Center__

    ---

    This Help Center contains documentation for earlier HCL Leap verions.

    ---

    [:octicons-arrow-right-24: Go to Leap 9.3.4 and earlier Help Center](https://help.hcl-software.com/Leap/9.3.4/index.html){target="_blank"}


</div>
