9.3.13/index.md
---
title: Home
template: home-blocks.html
hide:
  - navigation
  - toc
---

<div class="grid cards" markdown>

-   :material-new-box:{ .lg .middle } __What's New?__

    ---

    Find out what's new in the latest {{fullProductName}}.
    
    ---

    [:octicons-arrow-right-24: Go to What's New](./whats_new.md)
    
-   :material-code-braces-box:{ .lg .middle } __Introducing {{shortProductName}}__

    ---

    {{fullProductName}} builds dynamic forms and applications with a web-based interface. From a single interface, you can design a form, define access privileges, create workflow stages, deploy the application, and review submitted results.    

    ---

    [:octicons-arrow-right-24: Learn about {{shortProductName}}](./ovr_overview.md)

-   :material-server-network:{ .lg .middle } __Deploying {{shortProductName}}__

    ---

    Learn how to deploy {{shortProductName}}.
    
    ---

    [:octicons-arrow-right-24: Deploying {{shortProductName}}](./{{deployUrl}})

-   :material-list-box:{ .lg .middle } __System Requirements__

    ---

    Know the minimum system requirements for {{fullProductName}} version {{currentVersion}} and later.

    ---

    [:octicons-arrow-right-24: Go to System Requirements](./ovr_release_notes.md)

-   :material-book-open-variant:{ .lg .middle } __Tutorials__

    ---

    The {{shortProductName}} Help Center contains a section for tutorials to help you use {{shortProductName}}.

    ---

    [:octicons-arrow-right-24: Go to How To](./tut_tutorials_toc.md)

-   :material-school:{ .lg .middle } __HCLSoftware U__

    ---

    <!--![HCL Software U Logo](./assets/homepage-images/HCLSoftware-U-logo-blk.png)-->

    Explore self-paced learning courses for using {{fullProductName}}.
    
    ---

    [:octicons-arrow-right-24: Visit HCL Software U](https://hclsoftwareu.hcltechsw.com/){target="_blank"}

-   :material-lifebuoy:{ .lg .middle } __HCL Support__

    ---

    Discover HCL support bulletins and access your support cases.

    ---

    [:octicons-arrow-right-24: Access Support](https://support.hcltechsw.com/csm?id=csm_index){target="_blank"}

-   :material-theater:{ .lg .middle } __Community Forums__

    ---

    Join {{shortProductName}} community forums to connect with other {{shortProductName}} users, ask questions, and share insights.

    ---

    [:octicons-arrow-right-24: Go to Community Forums](https://support.hcltechsw.com/community){target="_blank"}

-   :material-account-group:{ .lg .middle } __{{shortProductName}} Ideas Portal__

    ---

    Join the {{shortProductName}} Ideas Portal to submit ideas for {{fullProductName}}.

    ---

    [:octicons-arrow-right-24: Join {{shortProductName}} Ideas Portal](https://domino-ideas.hcltechsw.com/){target="_blank"}

-   :material-help-box:{ .lg .middle } __{{oldDocsVersionStr}} and earlier Help Center__

    ---

    This Help Center contains documentation for earlier {{fullProductName}} versions.

    ---

    [:octicons-arrow-right-24: Go to {{oldDocsVersionStr}} and earlier Help Center]({{oldDocsUrl}}){target="_blank"}


</div>
